deploy/k8s/local/website/website-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: website-ingress
spec:
  rules:
  - host: trip.52.149.189.181.nip.io
    http:
      paths:
      - backend:
          serviceName: website-service
          servicePort: 80
        path: /
